letter spacing corrected

--- a/style.css
+++ b/style.css
@@ -26,12 +26,15 @@ body{
 }
 .cover .top h1{
     font-size: 56px;
+    letter-spacing: -2px;
 }
 .cover .top h2{
     font-size: 26px;
     margin: -5px 0 7px;
     position: relative;
     cursor: pointer;
+    letter-spacing: -1px;
+    font-weight: 700;
 }
 .cover .top h2::after{
     position: absolute;
